# src/backend/oracle-data-api/src/main/resources/occm-openapi-spec.yaml
@@ -324,7 +324,80 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ResponseResult'
+                $ref: '#/components/schemas/UpdateRequestResponseResult'
+      tags:
+        - Dispute Update Request
+  /v1/disputeUpdateRequest:
+    get:
+      parameters:
+        - name: disputeUpdateRequestId
+          in: query
+          description: ''
+          schema:
+            type: integer
+            format: int64
+      responses:
+        '200':
+          description: Ok
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/DisputeUpdateRequest'
+      tags:
+        - Dispute Update Request
+  /v1/disputeUpdateRequestList:
+    get:
+      parameters:
+        - name: disputeUpdateStatTypeCd
+          in: query
+          description: ''
+          schema:
+            type: string
+            maxLength: 4
+        - name: disputeUpdateReqTypeCd
+          in: query
+          description: ''
+          schema:
+            type: string
+            maxLength: 4
+        - name: disputeId
+          in: query
+          description: ''
+          schema:
+            type: integer
+            format: int64
+        - name: noticeOfDisputeGuid
+          in: query
+          description: ''
+          schema:
+            type: string
+            maxLength: 36
+            minLength: 36
+      responses:
+        '200':
+          description: Ok
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UpdateRequestListResponse'
+      tags:
+        - Dispute Update Request
+  /v1/updateDisputeUpdateRequest:
+    put:
+      requestBody:
+        description: body
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/DisputeUpdateRequest'
+        required: true
+      responses:
+        '200':
+          description: Ok
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UpdateRequestResponseResult'
       tags:
         - Dispute Update Request
 components:
@@ -456,6 +529,27 @@ components:
         exception:
           type: string
           format: nullable
+    UpdateRequestResponseResult:
+      type: object
+      properties:
+        status:
+          type: string
+        disputeUpdateRequestId:
+          type: string
+          format: nullable
+        disputeId:
+          type: string
+          format: nullable
+        exception:
+          type: string
+          format: nullable
+    UpdateRequestListResponse:
+      type: object
+      properties:
+        disputeUpdateRequests:
+          type: array
+          items:
+            $ref: '#/components/schemas/DisputeUpdateRequest'
     ViolationTicketListResponse:
       type: object
       properties:
